syntax = "proto3";

package userproto;

message UserModel{
    int32 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message RegisterRequest{
    UserModel user = 1;
}

message RegisterResponse{
    bool keyRegister = 1;
}


// Request data to read user
message GetUserRequest{

    // Unique integer identifier of the user
    string userid = 1;
}

// Contains user data specified in by ID request
message GetUserResponse{

    // Task entity read by ID
    UserModel User = 1;
}

// Request data to update user
message UpdateUserRequest{

    // Task entity to update
    UserModel User = 1;
}

// Contains status of update operation
message UpdateUserResponse{

    // Contains number of entities have beed updated
     string messageUdated = 1;
}

// Request data to delete user
message DeleteUserRequest{
    // Unique integer identifier of the user to delete
    int32 userid = 1;
}

// Contains status of delete operation
message DeleteUserResponse{

    // Contains number of entities have beed deleted
    // Equals 1 in case of succesfull delete
    string messageDeleted = 1;
}

//Request data to read all user
message GetAllUserRequest{
}

//Contains list of all users
message GetAllUserResponse{

    //List of all users
    repeated UserModel Users = 1;
}

message LoginRequest{
    string username=1;
    string password=2;
}

message LoginResponse{
    bool success=1;
}


// Service to manage list of users
service UserModelService {
    // Create new user
    rpc Register(RegisterRequest) returns (RegisterResponse);
    // Get user
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    // Update user;
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    // Delete user
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    // Get all users
    rpc GetAllUser(GetAllUserRequest) returns (GetAllUserResponse);
    // User Login
    rpc Login(LoginRequest) returns (LoginResponse);
}
